--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "7.9.6",
-    "@elliemae/ds-basic": "1.8.3",
-    "@elliemae/ds-classnames": "1.8.3",
-    "@elliemae/ds-datagrids": "1.8.3",
-    "@elliemae/ds-date-picker": "1.8.3",
-    "@elliemae/ds-dropdownmenu": "1.8.3",
-    "@elliemae/ds-filterbar": "1.8.3",
-    "@elliemae/ds-icons": "1.8.3",
-    "@elliemae/ds-modal": "1.8.3",
-    "@elliemae/ds-search-field": "1.8.3",
-    "@elliemae/ds-shared": "1.8.3",
-    "@elliemae/ds-system": "1.8.3",
-    "@elliemae/ds-treeview": "1.8.3",
-    "@elliemae/ds-utilities": "1.8.3",
-    "@elliemae/ds-shuttle": "1.8.3",
+    "@elliemae/ds-basic": "1.10.0-next.23",
+    "@elliemae/ds-classnames": "1.10.0-next.23",
+    "@elliemae/ds-datagrids": "1.10.0-next.23",
+    "@elliemae/ds-date-picker": "1.10.0-next.23",
+    "@elliemae/ds-dropdownmenu": "1.10.0-next.23",
+    "@elliemae/ds-filterbar": "1.10.0-next.23",
+    "@elliemae/ds-icons": "1.10.0-next.23",
+    "@elliemae/ds-modal": "1.10.0-next.23",
+    "@elliemae/ds-search-field": "1.10.0-next.23",
+    "@elliemae/ds-shared": "1.10.0-next.23",
+    "@elliemae/ds-system": "1.10.0-next.23",
+    "@elliemae/ds-treeview": "1.10.0-next.23",
+    "@elliemae/ds-utilities": "1.10.0-next.23",
+    "@elliemae/ds-shuttle": "1.10.0-next.23",
+    "@elliemae/ds-mobile": "1.10.0-next.23",
     "@elliemae/pui-theme": "1.2.0",
     "core-js": "3.6.5",
     "hotkeys-js": "3.8.1",
